fix junit testing for auth and security config